src/styles/components/_message.component.scss
@import '../base/variables';

.hfe-message {
  &__box {
    background-color: $light-color;
    border-radius: 4px;
    float: left;
    font-size: $font-s;
    margin-top: .5rem;
    margin-bottom: .5rem;
    max-width: 80%;
    padding: 1rem;
    opacity: 0;
    transform: translateX(-500px);
    position: relative;

    &.animateBox {
      opacity: 1;
      transform: translateX(0);
      transition: all $transition-fast ease;
    }

    &:after {
      content:"";
        display:inline-block;
        border-width: 8px;
        border-style: solid;
        border-color: transparent $light-color transparent transparent;
        width: 0px;
        height: 0px;
        left: -16px;
        top: 25%;
        position: absolute;
        z-index: 1;
    }

    &.animateBox {
      &.isCurrentUser {
        opacity: 1;
        transform: translateX(0);
        transition: all $transition-fast ease;
      }
    }

    &.isCurrentUser {
      background-color: rgba($lighter-primary-color, .4);
      color: $primary-color;
      float: right;
      transform: translateX(800px);

      &:after {
        content:"";
        border-color: transparent transparent transparent rgba($lighter-primary-color, .4);
        left: 100%;
      }
    }
  }

  &__date {
    display: block;
    font-size: $font-xxs;
    margin-bottom: .3rem;
    width: 100%;
  }
}

